--- a/index.html
+++ b/index.html
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Results summary component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
+  <div id="result">
+    <h1>Your Result</h1>
+    <div id="circle">
+      76
+      of 100
+    </div>
+    <h2>Great</h2>
+    <p>You scored higher than 65% of the people who have taken these tests.</p>
+  </div>
   
-  Summary
+  <h1>Summary</h1>
 
-  Reaction
-  80 / 100
+  <div id="reaction">
+    Reaction
+    80 / 100
+  </div>
 
-  Memory
-  92 / 100
+  <div id="memory">
+    Memory
+    92 / 100
+  </div>
 
-  Verbal
-  61 / 100
+  <div id="verbal">
+    Verbal
+    61 / 100
+  </div>
 
-  Visual
-  72 / 100
+  <div id="visual">
+    <img src="assets/images/icon-visual.svg" alt="icon-visual"> Visual
+    72 / 100
+  </div>
 
   Continue
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/gabrielluzetti" target="_blank">Gabriel Luzetti Latrônico</a>.
   </div>
 </body>
 </html>
