--- a/index.html
+++ b/index.html
@@ -12,36 +12,37 @@
   <div id="result">
     <h1>Your Result</h1>
     <div id="circle">
-      76
-      of 100
+      <div id="p">76</div>
+      <div id="of">of 100</div>
     </div>
-    <h2>Great</h2>
-    <p>You scored higher than 65% of the people who have taken these tests.</p>
+    <div id="rodape">
+      <h2>Great</h2>
+      <p>You scored higher than 65% of the people who have taken these tests.</p>
+    </div>
   </div>
   
-  <h1>Summary</h1>
-
-  <div id="reaction">
-    Reaction
-    80 / 100
+  <div id="summary">
+    <div>
+      <h1 id="t">Summary</h1>
+    </div>
+    <div class="model reaction">
+      Reaction
+      <div class="number">80 <div class="total">/100</div></div>
+    </div>
+    <div class="model memory">
+      Memory
+      <div class="number">92 <div class="total">/100</div></div>
+    </div>
+    <div class="model verbal">
+      Verbal
+      <div class="l1 number">61 <div class="l2 total">/100</div></div>
+    </div>
+    <div class="model visual">
+      Visual  
+      <div class="l1 number">72 <div class="ll total">/100</div></div>
+    </div>
+    Continue
   </div>
-
-  <div id="memory">
-    Memory
-    92 / 100
-  </div>
-
-  <div id="verbal">
-    Verbal
-    61 / 100
-  </div>
-
-  <div id="visual">
-    <img src="assets/images/icon-visual.svg" alt="icon-visual"> Visual
-    72 / 100
-  </div>
-
-  Continue
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
